get all event
